# MathUtil

./: .gitignore  CMakeLists.txt  LICENSE.txt  PremakeScript.bat  README.md  premake5.lua
src/: Mat2.cpp  Mat2.h  Mat3.cpp  Mat3.h  Vec.cpp  Vec.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
src/Exception/: MathException.h  MatrixError.h  MatrixException.h  VectorError.h  VectorException.h
